--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "json-loader": "^0.5.4",
     "raw-loader": "^0.5.1",
     "react": "^0.14.6",
+    "react-addons-pure-render-mixin": "^15.2.1",
     "react-dom": "^0.14.6",
     "react-markdown": "^2.4.2",
     "react-redux": "^4.4.5",
