--- a/package.json
+++ b/package.json
@@ -38,12 +38,11 @@
   },
   "dependencies": {
     "html-loader": "^0.4.3",
-    "json-loader": "^0.5.4",
+    "marked": "^0.3.5",
     "raw-loader": "^0.5.1",
     "react": "^0.14.6",
     "react-addons-pure-render-mixin": "^15.2.1",
     "react-dom": "^0.14.6",
-    "react-markdown": "^2.4.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.5.2",
     "redux": "^3.5.2",
