--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "eslint-plugin-react": "^3.6.2",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1"
+    "webpack-dev-server": "^1.12.1",
+    "querystring":"^0.2.0"
   },
   "dependencies": {
     "html-loader": "^0.4.3",
