--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "eslint-plugin-react": "^3.6.2",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1",
-    "querystring":"^0.2.0"
+    "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
     "html-loader": "^0.4.3",
@@ -49,6 +48,7 @@
     "redux": "^3.5.2",
     "remark": "^5.0.1",
     "remark-html": "^5.0.0",
-    "semantic-ui": "^2.2.2"
+    "semantic-ui": "^2.2.2",
+    "querystring":"^0.2.0"
   }
 }
