--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Boilerplate for ReactJS project with hot code reloading",
   "scripts": {
+    "build": "webpack --config ./webpack.prod.config.js --progress --colors",
     "start": "node server.js",
     "lint": "eslint src"
   },
@@ -37,8 +38,10 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "express-http-proxy": "^0.9.0",
     "html-loader": "^0.4.3",
     "marked": "^0.3.5",
+    "querystring": "^0.2.0",
     "raw-loader": "^0.5.1",
     "react": "^0.14.6",
     "react-addons-pure-render-mixin": "^15.2.1",
@@ -48,7 +51,6 @@
     "redux": "^3.5.2",
     "remark": "^5.0.1",
     "remark-html": "^5.0.0",
-    "semantic-ui": "^2.2.2",
-    "querystring":"^0.2.0"
+    "semantic-ui": "^2.2.2"
   }
 }
