--- a/package.json
+++ b/package.json
@@ -26,27 +26,29 @@
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.0.20",
-    "babel-eslint": "^4.1.3",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
-    "eslint": "^1.10.3",
-    "eslint-plugin-react": "^3.6.2",
+    "eslint": "^3.3.1",
+    "eslint-plugin-react": "^6.1.2",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "connect-redis": "^3.1.0",
     "express": "^4.14.0",
     "express-http-proxy": "^0.9.0",
+    "express-session": "^1.14.0",
     "html-loader": "^0.4.3",
     "marked": "^0.3.5",
     "querystring": "^0.2.0",
     "raw-loader": "^0.5.1",
-    "react": "^0.14.6",
+    "react": "^15.3.0",
     "react-addons-pure-render-mixin": "^15.2.1",
-    "react-dom": "^0.14.6",
+    "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.5.2",
     "redux": "^3.5.2",
