--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "webpack --config ./webpack.prod.config.js --progress --colors",
     "start": "node server.js",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "dev": "webpack-dashboard -- node server.js"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,7 @@
     "eslint-plugin-react": "^6.1.2",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.2",
+    "webpack-dashboard": "^0.1.7",
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
