--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "description": "OCCI client app",
   "scripts": {
-    "build": "webpack --config ./webpack.prod.config.js --progress --colors",
-    "start": "node server.js",
-    "lint": "eslint src",
-    "dev": "webpack-dashboard -- node server.js"
+    "start": "electron main.js",
+    "watch": "./node_modules/.bin/webpack-dev-server",
+    "electron-rebuild": "./node_modules/.bin/electron-rebuild"
   },
   "repository": {
     "type": "git",
@@ -32,18 +31,16 @@
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
+    "electron-prebuilt": "^1.2.0",
     "eslint": "^3.3.1",
     "eslint-plugin-react": "^6.1.2",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.2",
-    "webpack-dashboard": "^0.1.7",
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
-    "connect-redis": "^3.1.0",
     "express": "^4.14.0",
     "express-http-proxy": "^0.9.0",
-    "express-session": "^1.14.0",
     "html-loader": "^0.4.3",
     "marked": "^0.3.5",
     "querystring": "^0.2.0",
