--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.5.2",
-    "redux": "^3.5.2",
-    "semantic-ui": "^2.2.2"
+    "redux": "^3.5.2"
   }
 }
