--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
     "webpack": "^1.12.2",
+    "webpack-dev-server": ">=1.12.2 <=1.14.1",
     "express": "^4.14.0",
     "express-http-proxy": "^0.9.0",
     "express-session": "^1.14.0",
