--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "marked": "^0.3.5",
     "querystring": "^0.2.0",
     "raw-loader": "^0.5.1",
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0",
+    "react": ">=15.3.0 <15.4.0",
+    "react-dom": ">=15.3.0 <15.4.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.5.2",
     "redux": "^3.5.2"
